# notion-to-cypher

./: .gitignore  Dockerfile  LICENSE  README.md  flake.nix  notion-to-memgraph.cabal
.github/workflows/: build.yml  ci.yml
app/: Main.hs  Web.hs
src/: Transform.hs
src/Cypher/: Emit.hs
src/Notion/: Model.hs
